feat: Update dependencies and Docker configurations for api-gateway-auth
- Modify docker-compose.yml to include git installation and enable pre/post scripts for pnpm.
- Update package.json to upgrade fastify to version 5.3.2.
- Update pnpm-lock.yaml to reflect changes in package versions, including @fastify/csrf-protection, @nestjs/common, and others.
- Remove pnpm-workspace.yaml as it is no longer needed.
- Adjust main.ts to ensure proper type casting for Fastify instance.
- Add new pnpm-workspace.yaml for frontend-auth to manage workspace dependencies.

--- a/api-gateway-auth/docker-compose.yml
+++ b/api-gateway-auth/docker-compose.yml
@@ -28,9 +28,11 @@ services:
       DB_DATABASE: api_gateway_auth
       NODE_ENV: development
     command: >
-      sh -c "apk add --no-cache python3 make g++ &&
+      sh -c "apk add --no-cache python3 make g++ git &&
              npm install -g pnpm &&
+             pnpm config set enable-pre-post-scripts true &&
              pnpm install --unsafe-perm &&
+             pnpm rebuild bcrypt --force &&
              pnpm run migration:run"
 
 volumes:
